--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,7 @@ div#header {
 	display: block;
 	text-align: center;
 	font-weight: bold;
-	margin: 10px auto;
+	margin: 10px auto 50px auto;
 }
 div#header h1{
 	font-size: 24px;
@@ -15,11 +15,13 @@ div#header h2{
 	margin: 10px auto;
 }
 div#container{
-	width: 704px;
+	width: 100%;
+	min-width: 1400px;
 	margin: 0 auto;
 }
 div#wheel{
-	margin: 30px 50px;
+	margin: 0px 10px;
+	float: left;
 }
 div#jeopardy div {
 	display: block;
@@ -30,7 +32,6 @@ div#jeopardy div span{
 	display: inline-block;
 	border: 2px solid #003399;
 	width: 100px;
-	height: 30px;
 	margin: 5px 5px;
 	text-align: center;
 	border-radius: 5px;
@@ -42,4 +43,21 @@ div#jeopardy div#jeopardyCategories span{
 	height: 50px;
 	font-weight: bold;
 	line-height: 50px;
+}
+div#players {
+	margin: 20px auto 50px auto;
+	width: 590px;
+}
+div#players > div {
+	display: inline-block;
+	width: 150px;
+	margin: 10px 10px;
+	padding: 10px 10px;
+	border: 2px red solid;
+	border-radius: 5px;
+	background-color: #3366CC;
+	line-height: 1.5;
+}
+div#players > div.red{
+	background-color: red;
 }
