--- a/css/main.css
+++ b/css/main.css
@@ -53,11 +53,17 @@ div#players > div {
 	width: 150px;
 	margin: 10px 10px;
 	padding: 10px 10px;
-	border: 2px red solid;
+	border: 2px #ff6301 solid;
 	border-radius: 5px;
-	background-color: #3366CC;
+	background-color: #ffc700;
 	line-height: 1.5;
+}
+div#players > div span.score {
+	font-weight: bold;
 }
 div#players > div.red{
 	background-color: red;
+}
+div#spins {
+	margin-left: 60px;
 }
