--- a/css/main.css
+++ b/css/main.css
@@ -70,3 +70,49 @@ div#players > div.current {
 div#spins {
 	margin-left: 60px;
 }
+#overlay {
+    position: fixed; 
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: #000;
+    opacity: 0.5;
+    filter: alpha(opacity=50);
+}
+.hide{
+	display: none;
+}
+#modal {
+    position:absolute;
+    background:url(tint20.png) 0 0 repeat;
+    background:rgba(0,0,0,0.2);
+    border-radius:14px;
+    padding:8px;
+	width: 400px;
+	height: 200px;
+}
+#content {
+    border-radius:8px;
+    background:#fff;
+    padding:30px;
+	width: 200px;
+	height: 100px;
+}
+#close {
+    position:absolute;
+    background:url(../image/close.png) 0 0 no-repeat;
+    width:24px;
+    height:27px;
+    display:block;
+    text-indent:-9999px;
+    top:-7px;
+    right:-7px;
+}
+#category_selection {
+	margin: 20px 0;
+	display: block;
+}
+#category_btn {
+	float: right;
+}
